--- a/style.css
+++ b/style.css
@@ -118,8 +118,27 @@ article.page h2{
 	font-size: 200%;
 }
 
+.clearfix:before, .clearfix:after {
+	content: "";
+	display: table;
+}
+.clearfix:after {
+	clear: both; /* Do not allow floating elements on both sides of this class */
+}
+.clearfix {
+	*zoom: 1;
+}
 
+/* two column title layout */
+div.title-column{
+	width: 30%;
+	float: left;
+}
 
+div.text-column{
+	width: 70%;
+	float: right;
+}
 
 
 
